Vim und zusätzliche Zeichensätze mit mode verstecken.

--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -244,6 +244,7 @@ Diese können einfach aufgerufen werden.
 
 \stopsubsection
 
+\startmode[Fonts]
 \startsubsection[title={Betriebssystem Schriften}]
 
 ConTeXt kann auch auf die installierten Schriften des Betriebssystems zugreifen.
@@ -307,6 +308,7 @@ Das hier ist Vollkorn. {\bf Vollkorn in Fett} {\it und in Kursiv.}
 \stop
 
 \stopsubsection
+\stopmode
 
 \stopsection
 
