--- a/Intro/c19_Typing.tex
+++ b/Intro/c19_Typing.tex
@@ -86,6 +86,7 @@ Dann mit Scite (Der \type{\usemodule}-Befehl gehört normalerweise an den Anfang
 draw (0,0) withpen pencircle 1in withcolor red ;
 \stopMP
 
+\startmode[Vim]
 Und zum Abschluss mit Vim:
 
 \starttyping
@@ -97,6 +98,7 @@ Und zum Abschluss mit Vim:
 \startMPV
 draw (0,0) withpen pencircle 1in withcolor red ;
 \stopMPV
+\stopmode
 
 \stopsection
 
