--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -2,6 +2,9 @@
 \startproduct [*]
 \project project_intro
 
+% \enablemode[Vim]
+% \enablemode[Fonts]
+
 \setupinteraction
   [title={Eine kurze Einführung in ConTeXt},
 %   subtitle=SUBTITLE,
