\oldstyle statt \os.

--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -61,7 +61,9 @@ Alternativ gibt es auch eine Form in der der Text als Argument übergeben wird.
 \item
   unterstrichen 2: \type{{\underbars }} {\underbars Jedes Wort wird einzeln unterstrichen}
 \item
-  Oldstyle Ziffern: Normale Ziffern 1234567890 oder mit \type{{\os }} {\os 1234567890}
+  Oldstyle Ziffern: Normale Ziffern 1234567890 oder mit \type{{\oldstyle }} {\oldstyle 1234567890}
+  (Achtung: Es gibt noch den alten Befehl \type{\os}, dieser sollte {\em nicht} mehr verwendet werden.
+  \type{\os}: {\os 1992 -- 1999} \type{\oldstyle}: {\oldstyle 2000 -- 2020})
 \item
   Durchstreichen: \type{\overstrike{}} {\overstrike{over}}, 
   für einen durchgehenden Strich und \type{\overstrikes} für einen Strich pro Wort.
