\jobname und Co.

--- a/Intro/c05_Erstes_Dokument.tex
+++ b/Intro/c05_Erstes_Dokument.tex
@@ -145,6 +145,25 @@ Die Bezeichnungen sollten nur konsistent sein.
 
 \stopsubsection
 
+\startsubsection[title={Wer bin ich?}]
+
+Manchmal ist es sinnvoll den Dateinamen der aktuellen Datei zu kennen,
+z.\,B. um ihn bei einem Dokument mit mehreren Dateien in die Fußzeile zu schreiben.
+In den meisten Fällen reicht \type{\jobname} aus.
+
+\starttabulate [|T|T|]
+\NC \type{\jobname}           \NC \jobname           \NC\NR
+\NC \type{\jobfilename}       \NC \jobfilename       \NC\NR
+% \NC \type{\jobfilesuffix}     \NC \jobfilesuffix     \NC\NR
+\NC \type{\inputfilename}     \NC \inputfilename     \NC\NR
+\NC \type{\inputfilebarename} \NC \inputfilebarename \NC\NR
+% \NC \type{\inputfilesuffix}   \NC \inputfilesuffix   \NC\NR
+\NC \type{\outputfilename}    \NC \outputfilename    \NC\NR
+\NC \type{\operatingsystem}   \NC \operatingsystem   \NC\NR
+\stoptabulate
+
+\stopsubsection
+
 \stopsection
 
 
