Option "list" in Gliederung mit Link auf Verzeichnisse.

--- a/Intro/c07_Gliederung.tex
+++ b/Intro/c07_Gliederung.tex
@@ -88,6 +88,25 @@ Ein Dokument hat dann z.\,B. folgenden Aufbau:
       \stopsubsubsubsection
     \stopsubsubsection
   \stopsubsection
+  \startsubsection[
+    reference=subsection,
+    title={Eine ganz lange Überschrift\\ mit manuellen Umbruch},
+    list={Eine ganz lange Überschrift ohne manuellen Umbruch},
+    ]
+  \stopsubsection
+
+Es können unterschiedliche Texte für die Überschrift und den Eintrag im Inhaltsverzeichnis benutzt werden.
+So können z.\,B. Formeln oder Sonderzeichen in der Überschrift stehen, ein Beispiel dafür findet sich im Abschnitt \in{Kapitel}[bronx].
+
+\starttyping
+  \startsubsection[
+    reference=subsection,
+    title={Eine ganz lange Überschrift\\ mit manuellen Umbruch},
+    list={Eine ganz lange Überschrift ohne manuellen Umbruch},
+    ]
+\stoptyping
+
+
 \stopsection
 
 \stopcomponent
