LMTX mit Link in den ConTeXt Garden neu.

--- a/Intro/c03_Installation.tex
+++ b/Intro/c03_Installation.tex
@@ -85,6 +85,31 @@ context dateiname.tex
 
 aufgerufen. Wenn es keine Fehler gibt, entsteht so eine PDF-Datei sowie ein paar Hilfsdateien.
 
+\startsubsection[title={LuaMetaTeX, die Zukunft}]
+
+Im April 2019 wurde LuaMetaTeX (kurz LMTX) vorgestellt. 
+Diese neue, für ConTeXt optimierte, Engine bildet die Basis für zukünftige Entwicklungen von ConTeXt.
+
+Obwohl die Kompatibilität zu MkIV angestrebt wird, gibt es doch ein paar Abweichungen.
+In der Regel sind diese aber für den normalen Nutzer nicht relevant.
+
+Mit dem Befehl 
+\starttyping
+context --luatex
+\stoptyping
+
+steht außerdem die alte LuaTeX-basierte Version weiterhin zur Verfügung.
+
+Auf der Seite \goto{LMTX}[url(https://wiki.contextgarden.net/LMTX)] im Context Wiki gibt es weitere Informationen.
+Außerdem gibt es eine Installationsanleitung.
+Da sich LMTX zur Zeit (Mitte 2021) sehr schnell entwickelt, kann es zu Fehlern kommen,
+die in der Regel aber innerhalb weniger Tage korrigiert werden.
+
+Wer LMTX produktiv einsätzen möchte, sollte auf jeden Fall eine stabile Version als Backup bereithalten.
+Außerdem ist es empfehlenswert die \goto{Mailing Liste ntg-context}[url(https://wiki.contextgarden.net/Mailing_Lists)] zu abonnieren.
+Diese Liste ist englischsprachig.
+
+\stopsubsection
 
 \startsubsection[title={Schreibwerkzeuge}]
 \index{Schreibwerkzeug, Editor}
