Neues Kapitel: Probleme erschießen.

--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -56,6 +56,7 @@ intent=ISO coated v2 300\letterpercent\space (ECI)]
 \component [c45_Trennungen]
 \component [c47_Spielereien]
 \component [c49_Ausblick]
+\component [c50_Probleme]
 \component [c51_Verzeichnisse]
 
 
