TS-Program LMTX2022 statt 1.0.9

--- a/Intro/c19_Typing.tex
+++ b/Intro/c19_Typing.tex
@@ -1,9 +1,10 @@
-% !TEX TS-program = ConTeXt (LuaTeX 1.0.9)
+% !TEX TS-program = ConTeXt (LMTX2022)
 % !TEX encoding = UTF-8 Unicode
 
 \startcomponent *
 \product prd_intro
 \project project_intro
+% \enablemode[Vim]
 
 \startsection[
   reference=typing,
