--- a/Intro/c50_Probleme.tex
+++ b/Intro/c50_Probleme.tex
@@ -1,4 +1,4 @@
-% !TEX TS-program = ConTeXt (LuaTeX 1.0.9)
+% !TEX TS-program = ConTeXt (LMTX2021)
 % !TEX encoding = UTF-8 Unicode
 
 % Copyright 2021 Axel Kielhorn
